# Troubleshooter

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
deploy/: install.sh
deploy/systemd/: ec2-troubleshooter.service
docker/: Dockerfile  Dockerfile.offline  build-offline.sh  docker-compose.yml
src/ec2_troubleshooter/: __init__.py  __main__.py  compat.py
src/ec2_troubleshooter/alert/: __init__.py  normalizer.py  queue.py  receiver.py
src/ec2_troubleshooter/config/: logging.py  settings.py
src/ec2_troubleshooter/models/: __init__.py  alert.py  findings.py
src/ec2_troubleshooter/orchestrator/: __init__.py  analyzer.py  investigator.py
src/ec2_troubleshooter/reporter/: __init__.py  base.py  factory.py  formatter.py  gchat.py  log_reporter.py  webhook.py
src/ec2_troubleshooter/tools/: __init__.py  aws_client.py  cloudwatch_tools.py  ec2_tools.py  prometheus_tools.py  ssm_tools.py  tool_server.py
tests/: test_aiops_normalizer.py  test_alert_normalizer.py  test_analyzer.py  test_api.py  test_cloudwatch_tools.py  test_contributor_classification.py  test_ec2_tools.py  test_models.py  test_name_resolution.py  test_orchestrator.py  test_prometheus_tools.py  test_reporter.py  test_settings.py  test_ssm_tools.py  test_tool_server.py
