[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ec2-troubleshooter"
version = "0.1.0"
description = "Generic, read-only EC2 troubleshooting agent for air-gapped AWS environments"
requires-python = ">=3.10"
dependencies = [
    # AWS SDK – all calls go through VPC endpoints in air-gapped mode
    "boto3>=1.34",
    "botocore>=1.34",
    # Web framework for alert receiver API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    # Data modelling / validation
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # HTTP client used by reporter (GChat webhooks / ticketing)
    "httpx>=0.27",
    # Async task execution
    "anyio>=4.4",
    # Structured logging
    "structlog>=24.2",
    # Retry / back-off
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "moto[ec2,ssm,sts]>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "boto3-stubs[ec2,ssm,sts]>=1.34",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
